[gd_scene load_steps=7 format=2]

[ext_resource path="res://UI/UI.gd" type="Script" id=1]
[ext_resource path="res://UI/LifeFull.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/EmptyHeart.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/Theme.tres" type="Theme" id=4]
[ext_resource path="res://Assets/hud elements/orbs_hud.png" type="Texture" id=5]
[ext_resource path="res://Assets/hud elements/coins_hud.png" type="Texture" id=6]

[node name="UI" type="CanvasLayer"]
script = ExtResource( 1 )
fullHeartScene = ExtResource( 2 )
emptyHeartScene = ExtResource( 3 )

[node name="FullArea" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
theme = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LifeHolder" type="HBoxContainer" parent="FullArea"]
margin_right = 76.0
margin_bottom = 16.0
rect_scale = Vector2( 0.6, 0.6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="FullArea"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -34.0
margin_right = 8.00002
margin_bottom = 28.0
grow_horizontal = 0
grow_vertical = 0
rect_scale = Vector2( 0.8, 0.8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoinHolder" type="HBoxContainer" parent="FullArea/VBoxContainer"]
margin_right = 42.0
margin_bottom = 12.0
alignment = 2

[node name="CoinCounter" type="Label" parent="FullArea/VBoxContainer/CoinHolder"]
margin_left = 14.0
margin_right = 29.0
margin_bottom = 12.0
theme = ExtResource( 4 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="FullArea/VBoxContainer/CoinHolder"]
margin_left = 33.0
margin_right = 42.0
margin_bottom = 12.0
texture = ExtResource( 6 )

[node name="ManaHolder" type="HBoxContainer" parent="FullArea/VBoxContainer"]
margin_top = 16.0
margin_right = 42.0
margin_bottom = 28.0
alignment = 2

[node name="ManaCounter" type="Label" parent="FullArea/VBoxContainer/ManaHolder"]
margin_left = 14.0
margin_right = 29.0
margin_bottom = 12.0
theme = ExtResource( 4 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="FullArea/VBoxContainer/ManaHolder"]
margin_left = 33.0
margin_right = 42.0
margin_bottom = 12.0
texture = ExtResource( 5 )
